# gestor-de-tareas

./: .gitignore  README.md  docker-compose.yml
Gestor-proyectos/: Makefile  README.md  manage.py  pyproject.toml
Gestor-proyectos/apps/projects/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
Gestor-proyectos/apps/projects/management/commands/: seed_data.py
Gestor-proyectos/apps/projects/migrations/: 0001_initial.py
Gestor-proyectos/config/: __init__.py  urls.py  wsgi.py
Gestor-proyectos/config/settings/: base.py
Gestor-proyectos/gestor_proyectos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Gestor-proyectos/requirements/: development.txt
Gestor-proyectos/scripts/: create_tables.sql  init_db.sh  seed.sh
Gestor-proyectos/templates/: gestor-tareas.html
Gestor-proyectos/templates/projects/: _card.html  _column.html
